@@ -1,6 +1,7 @@
 Version Next
 
     - Only set "x-amz-server-side-encryption" header with PUT requests (issue #116)
+    - Don't kill IAM thread unless actually started (issue #115).
 
 Version 1.5.3 released August 9, 2019
 
